--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <button (click)="getAllNotes()" mat-flat-button color="primary">
+  <button appChangeColorOnHover (click)="getAllNotes()" mat-flat-button color="primary">
     Get All Notes
   </button>
   <!-- <button (click)="addNote()" mat-flat-button color="primary">Add Note</button> -->
